--- a/templates/countries/show.html.twig
+++ b/templates/countries/show.html.twig
@@ -6,6 +6,6 @@
 
     <h2>{{ country.name }}</h2>
     <h3>{{ country.content }}</h3>
-    <h3>{{ country.image }}</h3>
+    <p>{{ country.image }}</p>
 
 {% endblock %}
