--- a/templates/country/list.html.twig
+++ b/templates/country/list.html.twig
@@ -2,13 +2,47 @@
 
 {% block body %}
 
-    <ul>
-        {% for country in countries %}
-            <li><a href="{{ path('country_show', {
-                'countryName': country.name
-            }) }}">{{ country.name }}</a></li>
 
-        {% endfor %}
+    <section class="page">
+        <div class="container">
+            <div class="page_block page_title_block"></div>
+            <h2 class="page_title">Страны</h2>
+            <div class="row page_search_row">
+                <div class="col-lg-2 d-none d-lg-block">
+                    <div class="page_search_res">найдено 20 стран</div>
+                </div>
+                <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
+                    <input class="search page_search header_search" type="text">
+                    <img class="search_icon page_search_icon header_search_icon" src="../icons/search logo.png" alt="search">
+                </div>
+                <div class="col-lg-5 col-md-12">
+                    <div class="page_sort">
+                        Сортировать: <a class="page_sort_active" href="#">по релевантности</a> / <a href="#">по популярности</a> / <a href="#">по алфавиту</a>
+                    </div>
+                </div>
+            </div>
+            <div class="row content_countries">
+
+                {% for country in countries %}
+
+                    <div class="col-lg-2 col-md-3 col-sm-4 col-6">
+                        <a href="{{ path('country_show', {
+                            'countryName': country.name
+                        }) }}">
+                            <div class="content_countries_item content_countries_item_1">
+                                <div class="content_countries_item_img"></div>
+                                <div class="content_countries_item_country">{{ country.name }}</div>
+                            </div>
+                        </a>
+                    </div>
+
+                {% endfor %}
+
+            </div>
+        </div>
+    </section>
+    <ul>
+
     </ul>
 
 {% endblock %}
