--- a/templates/country/list.html.twig
+++ b/templates/country/list.html.twig
@@ -9,7 +9,7 @@
             <h2 class="page_title">Страны</h2>
             <div class="row page_search_row">
                 <div class="col-lg-2 d-none d-lg-block">
-                    <div class="page_search_res">найдено 20 стран</div>
+                    <div class="page_search_res">найдено {{ countries|length }} стран</div>
                 </div>
                 <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
                     <input class="search page_search header_search" type="text">
