--- a/templates/country/list.html.twig
+++ b/templates/country/list.html.twig
@@ -27,7 +27,7 @@
 
                     <div class="col-lg-2 col-md-3 col-sm-4 col-6">
                         <a href="{{ path('country_show', {
-                            'countryName': country.name
+                            'name': country.name
                         }) }}">
                             <div class="content_countries_item content_countries_item_{{ random(1, 20) }}">
                                 <div class="content_countries_item_img"></div>
