--- a/templates/style/list.html.twig
+++ b/templates/style/list.html.twig
@@ -10,7 +10,7 @@
         <h2 class="page_title">Виды пива</h2>
         <div class="row page_search_row">
             <div class="col-lg-2 d-none d-lg-block">
-                <div class="page_search_res">найдено 105 видов</div>
+                <div class="page_search_res">найдено {{ styles|length }} видов</div>
             </div>
             <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
                 <input class="search page_search header_search" type="text">
@@ -48,7 +48,9 @@
                             {% for style in styleSection.getStyles() %}
 
 
-                                <div class="col-12 col-sm-6 content_item_style"><a href="#">{{ style.name }}</a></div>
+                                <div class="col-12 col-sm-6 content_item_style"><a href="{{ path('style_show', {
+                                        'name': style.name
+                                    }) }}">{{ style.name }}</a></div>
 
                             {% endfor %}
 
