menus added style show

--- a/templates/style/show.html.twig
+++ b/templates/style/show.html.twig
@@ -4,9 +4,6 @@
 
 {% block body %}
 
-    <h2>{{ style.name }}</h2>
-    <h3>{{ style.content }}</h3>
-
     <section class="page">
         <div class="container">
             <div class="page_block page_title_block"></div>
@@ -16,9 +13,11 @@
                     <aside class="sidebar">
                         <ul class="sidebar_list">
 
-                            {% for styleSection in styleSections %}
+                            {% for style in styleSection.getStyles() %}
 
-                                <li class="sidebar_item"><a href="#item_2" class="sidebar_item_link">{{ styleSection.name }}</a></li>
+                                <li class="sidebar_item"><a href="{{ path('style_show', {
+                                        'name': style.name
+                                    }) }}" class="sidebar_item_link">{{ style.name }}</a></li>
 
                             {% endfor %}
 
@@ -27,42 +26,11 @@
                 </div>
                 <div class="col-md-9 col-sm-12 content">
                     <div class="content_item" id="item_1">
-                        <h3>Альтбир</h3>
+                        <h3>{{ style.name }}</h3>
                         <div class="row">
                             <article class="col-12 content_article">
-                                <p>Хорошо сбалансированное, хорошо выброженное пиво, горькое, но в то же время солодовое, чистое, округлое, цвет от янтарного до медного. Горечь сбалансирована солодовостью, но солодовая интенсивность и характер могут быть от умеренных до сильных (горечь возрастает вместе с солодовостью).</p>
 
-                                <p class="content_article_p_title">Аромат:</p>
-
-                                <p>Чистый, но мощный и комплексный аромат насыщенного зернового солода и пряных хмелей со сдержанными (от слабых до средне-слабых) фруктовыми эфирами. Солодовый характер отражает немецкие разновидности базовых солодов, с глубокими нотами хлеба, орехово-тостовыми нотами хлебной корки. Хмелевой аромат от умеренного до слабого, с пряным, перечным, цветочным, травянистым или парфюмерным характером, ассоциируемым с жатецкими хмелями.</p>
-
-                                <p class="content_article_p_title">Внешний вид:</p>
-
-                                <p>Цвет от светлого янтарного до глубокого медного, почти коричневого; наиболее типичен бронзово-оранжевый цвет. Блестящая прозрачность. Плотная сливочная стойкая пена кремового цвета.</p>
-
-                                <p class="content_article_p_title">Вкус:</p>
-
-                                <p>Настойчивая хмелевая горечь, хорошо сбалансированная добротным, но чистым и свежим солодовым характером. Присутствие солода умеривается выброженностью от средне-высокой до высокой, но могут оставаться значительные глубокие, сложные и несколько зерновые солодовые вкусы. Некоторые фруктовые эфиры могут сохраниться после периода созревания (особенно вишневые). Долгий, от средне-сухого до сухого, горько-сладкий или ореховый финиш отражает хмелевую горечь и солодовую сложность. Пряный, перечный или цветочный хмелевой вкус может быть от умеренного до слабого. Не должно быть вкуса или резкости жареного солода. Соответствующий уровень горечи иногда маскируется солодовым характером, горечь может казаться умеренной, если финиш не слишком сухой. Опционален легкий сернистый или минеральный характер.</p>
-
-                                <p class="content_article_p_title">Ощущение во рту:</p>
-
-                                <p>Тело среднее, округлое. Карбонизация от средней до средне-высокой, хотя может быть ниже при розливе из бочонка. Терпкость слабая или отсутствует. Несмотря на очень полный вкус, тело достаточно легкое, поэтому пиво можно употреблять в больших количествах.</p>
-
-                                <p class="content_article_p_title">Комментарии:</p>
-
-                                <p>Пиво верхового брожения, лагерируется, сбраживается при низких (элевых) температурах (15-20 °C) и затем созревает при низких температурах для создания более чистого и округлого пива, чем большинство элей. Альтбир, который варят в дюссельдорфской Zum Uerige — отличное пиво, но намного более агрессивно горькое и сложное, чем большинство других немецких образцов. Это что-то вроде Fuller’s ESB в категории крепких биттеров — хорошо известно, но в чем-то выходит за границы стиля. Не стоит оценивать все альтбиры с точки зрения Zum Uerige. Нужно допускать более сбалансированную горечь: для большинства других немецких образцов типичны 25-35 IBU. Крепкие Uerige Sticke и Doppel Sticke не подходят под определение этого стиля.</p>
-
-                                <p class="content_article_p_title">История:</p>
-
-                                <p>Традиционный для Дюссельдорфа стиль пива. Альтбир принадлежит к старому стилю пивоварения, то есть с использованием верховых дрожжей, который был типичен до того, как распространилось низовое брожение. Он существовал еще до выделения штаммов дрожжей низового брожения, хотя по многим характеристикам схож с лагерами. Многие классические образцы можно попробовать в пабах-пивоварнях в Альтштадте — старой части Дюссельдорфа.</p>
-
-                                <p class="content_article_p_title">Характерные ингредиенты:</p>
-
-                                <p>Состав засыпи варьируется, обычно состоит из немецких базовых солодов (обычно пилз, иногда мюнхенский) с небольшими добавками карамельного, шоколадного и/или черного солода для цвета. Иногда может включаться немного пшеницы, в том числе жареной. Типичен хмель Spalt, но могут использоваться и другие сорта жатецкого типа. Чистые элевые дрожжи с высокой сбраживающей способностью. Традиционно ступенчатое или декокционное затирание.</p>
-
-                                <p class="content_article_p_title">Сравнение стилей:</p>
-
-                                <p>Более горький и солодовый, чем международный янтарный лагер. По технологии производства и финишному цвету и вкусу чем-то похож на калифорнийское обычное, но ингредиенты различаются.</p>
+                                <p>{{ style.content }}</p>
 
                                 <p class="content_article_p_title">Характеристики:</p>
                                 Алкоголь по объему	4,3-5,5%<br>
