--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -4,9 +4,42 @@
 
 {% block body %}
 
-    <h2>{{ country.name }}</h2>
-    <h3>{{ country.content }}</h3>
-    <p>{{ country.image }}</p>
+    <section class="page">
+        <div class="container">
+            <div class="page_block page_title_block"></div>
+            <h2 class="page_title">Страны</h2>
+            <div class="row main">
+                <div class="col-md-3 col-sm-12">
+                    <aside class="sidebar">
+                        <ul class="sidebar_list">
 
+                            {% for country in countries %}
+
+                            <li class="sidebar_item"><a href="{{ path('country_show', {
+                                    'name': country.name
+                                }) }}" class="sidebar_item_link sidebar_item_link_active">{{ country.name }}</a></li>
+
+                            {% endfor %}
+
+                        </ul>
+                    </aside>
+                </div>
+                <div class="col-md-9 col-sm-12 content">
+                    <div class="content_item" id="item_1">
+                        <h3>{{ country.name }}</h3>
+                        <div class="row">
+                            <article class="col-12 content_article">
+                                <div class="content_item_text">
+
+                                    {{ country.content }}
+
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 {% endblock %}
