--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -28,10 +28,10 @@
                             <div class="col-lg-4 offset-lg-1 col-md-5 offset-md-0 col-sm-1 col-1">
                                 <nav>
                                     <ul class="menu">
-                                        <li class="menu_item"><a href="../styles/" class="menu_link">Виды пива</a></li>
-                                        <li class="menu_item"><a href="../countries/" class="menu_link menu_link_active">Страны</a></li>
-                                        <li class="menu_item"><a href="../news/" class="menu_link">Новости</a></li>
-                                        <li class="menu_item"><a href="../blog/" class="menu_link">Блог</a></li>
+                                        <li class="menu_item"><a href="{{ asset('style/') }}" class="menu_link">Виды пива</a></li>
+                                        <li class="menu_item"><a href="{{ asset('country/') }}" class="menu_link menu_link_active">Страны</a></li>
+                                        <li class="menu_item"><a href="{{ asset('news/') }}" class="menu_link">Новости</a></li>
+                                        <li class="menu_item"><a href="{{ asset('blog/') }}" class="menu_link">Блог</a></li>
                                     </ul>
                                 </nav>
                             </div>
@@ -163,10 +163,10 @@
                             <div class="col-lg-2 offset-lg-1 col-md-2 offset-md-1 col-sm-1 offset-sm-0">
                                 <nav>
                                     <ul class="menu">
-                                        <li class="menu_item"><a href="../styles/" class="menu_link">Виды пива</a></li>
-                                        <li class="menu_item"><a href="../countries/" class="menu_link">Страны</a></li>
-                                        <li class="menu_item"><a href="../news/" class="menu_link">Новости</a></li>
-                                        <li class="menu_item"><a href="../blog/" class="menu_link">Блог</a></li>
+                                        <li class="menu_item"><a href="{{ asset('style/') }}" class="menu_link">Виды пива</a></li>
+                                        <li class="menu_item"><a href="{{ asset('country/') }}" class="menu_link">Страны</a></li>
+                                        <li class="menu_item"><a href="{{ asset('news/') }}" class="menu_link">Новости</a></li>
+                                        <li class="menu_item"><a href="{{ asset('blog/') }}" class="menu_link">Блог</a></li>
                                     </ul>
                                 </nav>
                             </div>
