--- a/templates/country/show.html.twig
+++ b/templates/country/show.html.twig
@@ -17,7 +17,7 @@
 
                             <li class="sidebar_item"><a href="{{ path('country_show', {
                                     'name': country.name
-                                }) }}" class="sidebar_item_link sidebar_item_link_active">{{ country.name }}</a></li>
+                                }) }}" class="sidebar_item_link">{{ country.name }}</a></li>
 
                             {% endfor %}
 
