--- a/templates/style/list.html.twig
+++ b/templates/style/list.html.twig
@@ -17,57 +17,70 @@
                 <div class="page_search_res">найдено {{ styles|length }} видов</div>
             </div>
             <div class="col-lg-4 offset-lg-1 d-none d-lg-block">
-                <input class="search page_search header_search" type="text">
+
+            <input class="search page_search header_search" type="text" name="message">
+
                 <img class="search_icon page_search_icon header_search_icon" src="../icons/search logo.png" alt="search">
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="page_sort">
-                    Сортировать: <a class="page_sort_active" href="#">по релевантности</a> / <a href="#">по популярности</a> / <a href="#">по алфавиту</a>
+                    Сортировать: <a class="page_sort_type" id="sort_rel" href="#">по релевантности</a> / <a class="page_sort_type" id="sort_pop" href="#">по популярности</a> / <a class="page_sort_type" id="sort_alp" href="#">по алфавиту</a>
                 </div>
             </div>
         </div>
         <div class="row main">
-            <div class="col-md-3 col-sm-12">
-                <aside class="sidebar">
-                    <ul class="sidebar_list">
-
-                        {% for styleSection in styleSections %}
-
-                        <li class="sidebar_item"><a href="#item_{{ styleSection.id }}" class="sidebar_item_link">{{ styleSection.name }}</a></li>
-
-                        {% endfor %}
-
-                    </ul>
-                </aside>
-            </div>
-            <div class="col-md-9 col-sm-12 content">
-
-                {% for styleSection in styleSections %}
-
-                    <div class="content_item" id="item_{{ styleSection.id }}">
-                        <h3>{{ styleSection.name }}</h3>
-
-                        <div class="row">
-
-                            {% for style in styleSection.getStyles() %}
-
-
-                                <div class="col-12 col-sm-6 content_item_style"><a href="{{ path('style_show', {
-                                        'name': style.name
-                                    }) }}">{{ style.name }}</a></div>
-
-                            {% endfor %}
-
-                        </div>
-                    </div>
-
-                {% endfor %}
-
-            </div>
+            {% include 'style/_sortlist.html.twig' %}
         </div>
     </div>
 </section>
 
-
  {% endblock %}
 
+{% block javascripts %}
+
+    {{ parent() }}
+
+    <script>
+
+        $('.page_sort_type').on('click', function(e) {
+
+            let id = this.id;
+            $('.page_sort_type').removeClass('page_sort_active');
+            $(this).addClass('page_sort_active');
+
+            e.preventDefault(); //Prevent Default action.
+
+            $.ajax({
+                url: "{{ path("styleasc") }}",
+                type: 'POST',
+                dataType: 'html',
+                // contentType: "application/json",
+                data: {
+                    'sortType': id
+                }
+            }).done(function (data) {
+                $('.main').html(data);
+            });
+        });
+
+        $('.page_search').on('keyup', function(e) {
+
+            e.preventDefault(); //Prevent Default action.
+
+            $.ajax({
+                url: "{{ path("style_ajax_desc") }}",
+                type: 'POST',
+                dataType: 'html',
+                // contentType: "application/json",
+                data: {
+                    'sortType': 'sort_alp'
+                }
+            }).done(function (data) {
+                $('.main').html(data);
+            });
+
+        });
+
+    </script>
+
+{% endblock %}
