--- a/templates/style/_searchlist.html.twig
+++ b/templates/style/_searchlist.html.twig
@@ -4,9 +4,9 @@
 
 
 
-                    {% for style in styles %}
+                    {% for styleSection in styleSections %}
 
-                        <li class="sidebar_item"><a href="#item_{{ style.id }}" class="sidebar_item_link">{{ style.getStyleSection().name }}</a></li>
+                        <li class="sidebar_item"><a href="#item_{{ styleSection.id }}" class="sidebar_item_link">{{ styleSection.name }}</a></li>
 
                     {% endfor %}
 
@@ -19,21 +19,23 @@
 
 
 
-                            {% for style in styles %}
+    {% for styleSection in styleSections %}
 
-                                <div class="content_item" id="item_{{ style.getStyleSection().id }}">
-                                    <h3>{{ style.getStyleSection().name }}</h3>
+                                <div class="content_item" id="item_{{ styleSection.id }}">
+                                    <h3>{{ styleSection.name }}</h3>
 
                                     <div class="row">
 
 
+                                        {% for style in styles %}
 
+                                            {{ dump(style) }}
 
                                             <div class="col-12 col-sm-6 content_item_style"><a href="{{ path('style_show', {
                                                     'name': style.name
                                                 }) }}">{{ style.name }}</a></div>
 
-
+                                        {% endfor %}
 
                                     </div>
                                 </div>
