--- a/templates/style/list.html.twig
+++ b/templates/style/list.html.twig
@@ -20,7 +20,7 @@
 
             <input class="search page_search header_search" type="text" name="message">
 
-                <img class="search_icon page_search_icon header_search_icon" src="../icons/search logo.png" alt="search">
+                <img class="search_icon page_search_icon header_search_icon" src="{{ asset('../icons/search logo.png') }}" alt="search">
             </div>
             <div class="col-lg-5 col-md-12">
                 <div class="page_sort">
