--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -37,7 +37,7 @@
                         <h3>{{ article.name }}</h3>
                         <div class="row">
                             <article class="col-12 content_article">
-                                <div class="content_item_img"></div>
+                                <div class="content_item_img" style="background-image:url('{{asset('../img/' ~ article.image)}}')"></div>
                                 <div class="content_item_text">
 
                                     {{ article.content }}
