--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -66,31 +66,22 @@
                             <h3 class="section_title similar_news_title">Похожие статьи</h3>
                         </div>
                         <div class="row">
+
+                            {% for article in three_articles %}
+
                             <div class="col-md-4">
-                                <a href="#">
+                                <a href="{{ path('article_show', {
+                                    'name': article.name,
+                                }) }}">
                                     <div class="similar_news_item similar_news_item_1">
-                                        <div class="similar_news_item_img"></div>
-                                        <div class="similar_news_item_subtitle">В Швеции разработали автономную пивоварню на солнечных батареях</div>
+                                        <div class="similar_news_item_img" style="background-image:url('{{asset('../img/' ~ article.image)}}')"></div>
+                                        <div class="similar_news_item_subtitle">{{ article.name }}</div>
                                     </div>
                                 </a>
                             </div>
-                            <div class="col-md-4">
-                                <a href="#">
-                                    <div class="similar_news_item similar_news_item_2">
-                                        <div class="similar_news_item_img"></div>
-                                        <div class="similar_news_item_subtitle">Дуббель (англ. Belgian Dubbel Ale)</div>
-                                    </div>
-                                </a>
-                            </div>
-                            <div class="col-md-4">
-                                <a href="#">
-                                    <div class="similar_news_item similar_news_item_3">
-                                        <div class="similar_news_item_img"></div>
-                                        <div class="similar_news_item_subtitle">Ирландский красный эль (англ. Irish Red Ale)
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
+
+                            {% endfor %}
+
                         </div>
                     </section>
                 </div>
